--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Josi Pichet</title>
 
     <!--logo de l'onglet-->
-    <link rel="shortcut icon" href="./assets/img/147900.svg">
+    <link rel="shortcut icon" href="./147900.svg">
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -38,7 +38,7 @@
 
         <div class="grid-container">
           <img
-            src="./assets/img/Josiane .jpg"
+            src="./Josiane .jpg"
             alt="Josiane Pichet"
           />
 
